# ClearNoteHealth_TOTO_nature_comm_bio_analysis_code

./: .gitignore  CITATION.cff  Dockerfile  LICENSE.txt  README.md  pyproject.toml
R/: r-requirements.txt
R/manuscripts/: Main_Figures.R  Supplemental_Figures.R
data/: Figure_1B.data.pkl  Figure_1_gfeature_enrichment.tsv  Figure_1_sample_qc.tsv  Figure_2_DRG_allvsall.Rdata  Figure_5B.model_score.pkl  SFigure_1A.nheatmap.pkl  SFigure_1C_metagene.csv  SFigure_1E_gsea_c8.tsv  SFigure_3B.venn_diagram.pkl  SFigure_3C.venn_diagram.pkl  SFigure_4A_cancer_score.tsv  SFigure_4B_models.rds  SFigure_4C_tm_scores.csv  SFigure_5C_tumortissue_toto_tf.csv  SFigure_5E_data.csv
python/: python-requirements.txt
python/manuscripts/: Main_Figures.py  Supplemental_Figures.py  common_variables.py
