[project]
name = "toto-nature-comm-bio-analysis-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib-inline==0.1.7",
    "matplotlib==3.6.3",
    "numpy==1.24.2",
    "matplotlib-venn==0.11.7",
    "ipykernel==6.29.5",
    "ipython==8.18.1",
    "jupyter==1.1.1",
    "plotly==5.10.0",
    "nheatmap==0.1.4",
    "densityplot==0.1.8",
    "anndata==0.8.0",
    "scanpy==1.9.1",
    "scikit-learn==1.2.2",
    "scipy==1.13.1",
    "seaborn==0.12.1",
    "statsmodels==0.14.4",
    "rpy2==3.5.16",
    "pandas==1.5.1",
    "umap-learn==0.5.7",
]
